--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -38,7 +38,9 @@ jobs:
       run: npm install axios
 
     - name: Fetch and update jobs
-      run: node .github/scripts/job-fetcher/index.js 2>&1 | tee .github/logs/job-fetcher.log
+      run: |
+        mkdir -p .github/logs
+        node .github/scripts/job-fetcher/index.js 2>&1 | tee .github/logs/job-fetcher.log
       env:
         JSEARCH_API_KEY: ${{ secrets.JSEARCH_API_KEY }}
 
