Fix workflow schedule to run every 12 minutes
- Updated from once daily to staggered 12-minute intervals
- Ensures continuous fresh job flow throughout the day
- Added jsearch_usage.json to git commits for quota tracking

--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -2,7 +2,7 @@ name: Update Jobs from JSearch
 
 on:
   schedule:
-    - cron: '4 9 * * *'  # Daily at 9:04 AM UTC (staggered)
+    - cron: '4,16,28,40,52 * * * *'  # Every 12 minutes (staggered schedule)
   workflow_dispatch: # Allow manual triggering
   push:
     branches: [ main ]
@@ -102,7 +102,7 @@ jobs:
             }
 
             # Stage and commit
-            git add README.md .github/data/current_jobs.json .github/logs/ || true
+            git add README.md .github/data/current_jobs.json .github/data/jsearch_usage.json .github/logs/ || true
 
             # Check if there are still changes to commit
             if git diff --staged --quiet; then
