--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -28,6 +28,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         ref: ${{ github.ref_name }}
+        submodules: recursive  # Initialize git submodules (required for shared/ directory)
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
