--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -1,4 +1,4 @@
-name: Update Jobs from JSearch
+name: Update Jobs from Aggregator
 
 on:
   schedule:
@@ -8,6 +8,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/scripts/job-fetcher/**'
+      - '.github/scripts/write-current-jobs.js'
 
 # Prevent concurrent runs to avoid git conflicts
 concurrency:
@@ -27,7 +28,7 @@ jobs:
       with:
         ref: ${{ github.ref_name }}
         fetch-depth: 1
-        submodules: recursive  # Initialize git submodules (required for shared/ directory)
+        submodules: recursive  # Required for shared/ aggregator-consumer library
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -42,9 +43,6 @@ jobs:
       run: |
         mkdir -p .github/logs
         node .github/scripts/job-fetcher/index.js 2>&1 | tee .github/logs/job-fetcher.log
-      env:
-        JSEARCH_API_KEY: ${{ secrets.JSEARCH_API_KEY }}
-        GH_PAT: ${{ secrets.GH_PAT }}
 
     - name: Write current_jobs.json for aggregator
       run: |
@@ -86,65 +84,43 @@ jobs:
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
 
-        # Function to commit and push with proper conflict resolution
         commit_and_push() {
           local max_attempts=5
           local delay=5
 
           for attempt in $(seq 1 $max_attempts); do
-            echo "========================================="
             echo "Attempt $attempt of $max_attempts"
-            echo "========================================="
 
-            # Pull latest remote changes
-            echo "Pulling latest changes from remote..."
             git pull origin ${{ github.ref_name }} --no-edit || {
               echo "Pull had conflicts, resetting..."
               git reset --hard HEAD
             }
 
-            # Stage and commit
-            git add README.md .github/data/current_jobs.json .github/data/jsearch_usage.json .github/logs/ || true
+            git add README.md .github/data/current_jobs.json .github/data/new_jobs.json .github/logs/ || true
 
-            # Get job count for commit message
             JOB_COUNT=$(grep -o "Total_Jobs-[0-9]*" README.md | grep -o "[0-9]*" || echo "0")
 
-            COMMIT_MSG="Update jobs - $(date +'%Y-%m-%d %H:%M UTC')
-
-        Found $JOB_COUNT positions
-        Updated job listings via JSearch API
-
-        Triggered by: ${{ github.event_name }}"
+            COMMIT_MSG="Update jobs - $(date +'%Y-%m-%d %H:%M UTC') | Found $JOB_COUNT software engineering positions"
 
             if ! git commit -m "$COMMIT_MSG"; then
               echo "Commit failed, may already be committed"
             fi
 
-            # Push with retry
-            echo "Pushing changes to remote..."
             if git push origin ${{ github.ref_name }}; then
               echo "Successfully pushed changes!"
               exit 0
             else
-              echo "Push failed (branch diverged again)"
-
-              # Undo commit but keep changes staged for retry
+              echo "Push failed — retrying in ${delay}s..."
               git reset --soft HEAD~1
-
-              # Exponential backoff
-              echo "Waiting ${delay}s before retry..."
               sleep $delay
               delay=$((delay * 2))
             fi
           done
 
-          echo "========================================="
           echo "Failed to push after $max_attempts attempts"
-          echo "========================================="
           exit 1
         }
 
-        # Execute the function
         commit_and_push
 
     - name: Create job summary
@@ -155,19 +131,14 @@ jobs:
         if [ "${{ steps.verify-changed-files.outputs.changed }}" == "true" ]; then
           JOB_COUNT=$(grep -o "Total_Jobs-[0-9]*" README.md | grep -o "[0-9]*" || echo "0")
 
-          echo "Successfully updated job board with fresh opportunities" >> $GITHUB_STEP_SUMMARY
+          echo "Successfully updated software engineering job board" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Today's Update:" >> $GITHUB_STEP_SUMMARY
-          echo "- **$JOB_COUNT total positions** from JSearch API" >> $GITHUB_STEP_SUMMARY
+          echo "- **$JOB_COUNT total software engineering positions** from centralized aggregator" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Filters Applied:" >> $GITHUB_STEP_SUMMARY
-          echo "- Removed duplicates and spam postings" >> $GITHUB_STEP_SUMMARY
-          echo "- Filtered by date and relevance" >> $GITHUB_STEP_SUMMARY
-          echo "- Verified application links" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Next update**: Daily at 9 AM UTC" >> $GITHUB_STEP_SUMMARY
+          echo "**Next update**: In ~12 minutes" >> $GITHUB_STEP_SUMMARY
         else
-          echo "No new opportunities found - job board is current" >> $GITHUB_STEP_SUMMARY
+          echo "No changes detected - job board is current" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Next check**: Daily at 9 AM UTC" >> $GITHUB_STEP_SUMMARY
+          echo "**Next check**: In ~12 minutes" >> $GITHUB_STEP_SUMMARY
         fi
