--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-# Development
+# Dependencies
+node_modules/
+**/node_modules/
+
+# Environment
+.env
+.env.*
+*.env
+!.env.example
+
+# Claude Code (tooling config — never commit)
 .claude/
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 
@@ -18,9 +28,24 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Temp / mistyped commands
+*.tmp
+*.temp
+tatus
+tatus -v
+tatus*
+
+# Build
+dist/
+build/
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Secrets
+*token*
+*secret*
+*credential*
+*.key
+*.pem
