--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -2,7 +2,7 @@ name: Update Jobs from Aggregator
 
 on:
   schedule:
-    - cron: '4,19,34,49 * * * *'  # Every 15 minutes (staggered schedule)
+    - cron: '*/15 * * * *'  # Every 15 minutes
   workflow_dispatch: # Allow manual triggering
   push:
     branches: [ main ]
